--- a/Schedule_library/Schedule_library.csproj
+++ b/Schedule_library/Schedule_library.csproj
@@ -52,42 +52,34 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
-      <SubType>Form</SubType>
-    </Compile>
+    <Compile Include="Form1.cs" />
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Views\EditItem.cs">
-      <SubType>Form</SubType>
-    </Compile>
+    <Compile Include="Views\EditItem.cs" />
     <Compile Include="Views\EditItem.Designer.cs">
       <DependentUpon>EditItem.cs</DependentUpon>
     </Compile>
-    <Compile Include="Views\FormLoginRegister.cs">
-      <SubType>Form</SubType>
-    </Compile>
+    <Compile Include="Views\FormLoginRegister.cs" />
     <Compile Include="Views\FormLoginRegister.Designer.cs">
       <DependentUpon>FormLoginRegister.cs</DependentUpon>
     </Compile>
-    <Compile Include="Views\Layout.cs">
-      <SubType>Form</SubType>
+    <Compile Include="Views\Home.cs" />
+    <Compile Include="Views\Home.Designer.cs">
+      <DependentUpon>Home.cs</DependentUpon>
     </Compile>
+    <Compile Include="Views\Layout.cs" />
     <Compile Include="Views\Layout.Designer.cs">
       <DependentUpon>Layout.cs</DependentUpon>
     </Compile>
     <Compile Include="Views\ListItem.cs" />
-    <Compile Include="Views\Register.cs">
-      <SubType>Form</SubType>
-    </Compile>
+    <Compile Include="Views\Register.cs" />
     <Compile Include="Views\Register.Designer.cs">
       <DependentUpon>Register.cs</DependentUpon>
     </Compile>
-    <Compile Include="Views\RegisterItem.cs">
-      <SubType>Form</SubType>
-    </Compile>
+    <Compile Include="Views\RegisterItem.cs" />
     <Compile Include="Views\RegisterItem.Designer.cs">
       <DependentUpon>RegisterItem.cs</DependentUpon>
     </Compile>
@@ -105,6 +97,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Views\FormLoginRegister.resx">
       <DependentUpon>FormLoginRegister.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Views\Home.resx">
+      <DependentUpon>Home.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Views\Layout.resx">
       <DependentUpon>Layout.cs</DependentUpon>
